<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/alarmItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txtTime"
                android:text="00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txtTime"
                android:text=":"/>

            <TextView
                android:id="@+id/txtMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txtTime"
                android:text="00"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/enable_switch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="190dp"
                android:theme="@style/SwitchButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/marginLeft">

            <TextView
                android:id="@+id/txtSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />

            <TextView
                android:id="@+id/txtMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:paddingLeft="@dimen/dayPaddingLeft"/>

            <TextView
                android:id="@+id/txtTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:paddingLeft="@dimen/dayPaddingLeft"/>

            <TextView
                android:id="@+id/txtWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:paddingLeft="@dimen/dayPaddingLeft"/>

            <TextView
                android:id="@+id/txtThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:paddingLeft="@dimen/dayPaddingLeft"/>

            <TextView
                android:id="@+id/txtFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:paddingLeft="@dimen/dayPaddingLeft"/>

            <TextView
                android:id="@+id/txtSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:paddingLeft="@dimen/dayPaddingLeft"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/soundImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/marginLeft"
                app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

            <TextView
                android:id="@+id/soundName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dayPaddingLeft"
                android:layout_marginBottom="@dimen/dayPaddingLeft"
                android:text="SoundName"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
